feat: se cambio modelo de user uno para registro, se agrego dto y validaciones se agrego hash para password pending hacer Todos
