# src/persistence/entities/User.ts
@@ -1,13 +1,48 @@
-import { DataTypes } from "sequelize";
+import { DataTypes, UUIDV4 } from "sequelize";
 import dbConfig from "../sequalize/dbConfig";
 
-export const User = dbConfig.define("user", {
-  name: DataTypes.TEXT,
-  favoriteColor: {
-    type: DataTypes.TEXT,
-    defaultValue: "green",
+export const User = dbConfig.define(
+  "user",
+  {
+    id: {
+      primaryKey: true,
+      type: DataTypes.UUID,
+      defaultValue: UUIDV4,
+      unique: true,
+      allowNull: false,
+    },
+    userName: {
+      type: DataTypes.TEXT,
+      allowNull: false,
+      unique: true,
+    },
+    email: {
+      type: DataTypes.TEXT,
+      allowNull: false,
+      unique: true,
+      validate: {
+        isEmail: true,
+      },
+    },
+    firstName: DataTypes.STRING,
+    lastName: DataTypes.STRING,
+    password: {
+      type: DataTypes.STRING(64),
+      validate: {
+        is: /^(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/,
+      },
+    },
+    isAdmin: {
+      type: DataTypes.BOOLEAN,
+      defaultValue: false,
+    },
+    deletedAt: {
+      type: DataTypes.DATE,
+      allowNull: true,
+    },
   },
-  age: DataTypes.INTEGER,
-  cash: DataTypes.INTEGER,
-});
-
+  {
+    timestamps: true,
+    paranoid: true,
+  }
+);
